# hermes-1

./: .gitignore  CMakeLists.txt
hermes2d/test_examples/FCT/DG_CG/: .gitignore  CMakeLists.txt  definitions.cpp  definitions.h  error.txt  l2_semi_cg_space.cpp  l2_semi_cg_space.h  lumped_projection.cpp  main.cpp  main_fct.cpp  main_new.cpp  p1_list.cpp  p_adapt.cpp
hermes2d/test_examples/FCT_example/: CMakeLists.txt
hermes2d/test_examples/FCT_example/Euler/: CMakeLists.txt  Euler  artificial_diffusion.cpp  definitions.cpp  definitions.h  domain.mesh  euler_util.cpp  euler_util.h  fct.cpp  initial_condition.cpp  initial_condition.h  main.cpp
hermes2d/test_examples/FCT_example/Euler_adap/: CMakeLists.txt
hermes2d/test_examples/FCT_example/FCT/: CMakeLists.txt  FCT  artificial_diffusion.cpp  definitions.cpp  definitions.h  end_uniform.vtk  fct (copy).cpp  fct.cpp  h_adapt.cpp  main.cpp  p1_list.cpp  reg_estimator.cpp
hermes2d/test_examples/FCT_example/FCT_2/: CMakeLists.txt  FCT_2  end_uniform.vtk  fct.cpp  init_uniform.vtk  lumped_projection.h  main.cpp  p1_list.cpp  reg_estimator.cpp
hermes2d/test_examples/FCT_example/FCT_h_adap/: FCT_h_adap  artificial_diffusion.cpp  definitions.cpp  fct.cpp  h_adapt.cpp  hp_adapt.cpp  main.cpp  main_2.cpp  mass_lumping.cpp  p1_list.cpp  reg_estimator.cpp
hermes2d/test_examples/FCT_example/FCT_h_adap_2/: CMakeLists.txt  FCT_h_adap_2  artificial_diffusion.cpp  fct.cpp  h_adapt.cpp  lumped_projection.cpp  main.cpp  main_old.cpp  mass_lumping.cpp  p1_list.cpp  reg_estimator.cpp
hermes2d/test_examples/FCT_example/FCT_hp_adap/: CMakeLists.txt  FCT_hp_adap  artificial_diffusion.cpp  definitions.cpp  definitions.h  fct.cpp  hp_adapt.cpp  lumped_projection.h  main.cpp  mass_lumping.cpp  p1_list.cpp  p_adapt.cpp  reg_estimator.cpp
hermes2d/test_examples/FCT_example/FCT_hp_adap_2/: CMakeLists.txt  FCT_hp_adap_2  definitions.cpp  definitions.h  fct.cpp  main.cpp  mass_dp.cpp  mass_dp.h  mass_lumping.cpp  p1_list.cpp  p_adapt.cpp  p_adapt_old.cpp  proj_FCT_un.vtk  reg_estimator.cpp  z_z.cpp
hermes2d/test_examples/FCT_example/FCT_hp_adap_ref/: CMakeLists.txt  FCT_hp_adap_ref  definitions.cpp  definitions.h  fct.cpp  fct.h  highOrder.cpp  highOrder.h  hp_adapt.h  lowOrder.cpp  lumped_projection.cpp  lumped_projection.h  main.cpp  main_h.cpp  reg_estimator.cpp  reg_estimator.h
hermes2d/test_examples/FCT_example/FCT_stationary/: CMakeLists.txt  FCT_stationary  definitions.cpp  definitions.h  domain.mesh  fct.cpp  hp_adapt.cpp  (+6 more)
(+1146 files in other folders)
