add_subdirectory(FCT_h_adap)
add_subdirectory(FCT_h_adap_2)
add_subdirectory(FCT_hp_adap)
add_subdirectory(FCT_hp_adap_ref)
add_subdirectory(FCT_hp_adap_2)
add_subdirectory(FCT_stationary)
add_subdirectory(FCT_stationary_2)
add_subdirectory(FCT_stationary_Galerkin)
add_subdirectory(FCT)
add_subdirectory(FCT_2)
add_subdirectory(Euler)
add_subdirectory(Euler_adap)

