add_subdirectory("solid_body")
add_subdirectory("FCT_BB")
add_subdirectory("solid_body_2")
add_subdirectory("slope_limiter")
add_subdirectory("solid_body_ref")
add_subdirectory("solid_body_ref_2")
add_subdirectory("stationary_problem")
add_subdirectory("stationary_problem_2")
add_subdirectory("stationary_problem_convection_diffusion")
add_subdirectory("Euler")
add_subdirectory("Partikel")
add_subdirectory("swirling_flow")
add_subdirectory("hump_height")
add_subdirectory("hump_height_ref")
add_subdirectory("testcase")
add_subdirectory("rotation_ref")
add_subdirectory("hp_ref")
add_subdirectory("hp_proj")

